--- a/index.html
+++ b/index.html
@@ -1,177 +1,1 @@
-<!DOCTYPE html>
-<!-- saved from url=(0027)http://resume.jasinyip.com/ -->
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-    <meta name="renderer" content="webkit">
-    <title>刘单单</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script type="text/javascript" src="chrome-extension://aadgmnobpdmgmigaicncghmmoeflnamj/ng-inspector.js"></script>
-</head>
-<body>
-<section id="block-firstPage" style="height: 554px;">
-    <p class="blockTitle" style="display: block; top: 219.695px;">Hello World</p>
-    <div id="fstPage-down"><a href="http://github.com/dandanliu918" hidefocus="true"></a></div>
-</section>
-
-
-<section id="block-nav" style="z-index: 1; position: fixed;">
-    <header class="container">
-        <a class="fl" href="#block-firstPage" id="logo" hidefocus="true">刘单单</a>
-        <nav class="fr">
-            <a href="#block-intro" id="nav-intro" hidefocus="true">个人简介</a>
-            <a href="#block-skill" id="nav-skill" hidefocus="true">专业技能</a>
-            <a href="#block-workEXP" id="nav-workEXP" hidefocus="true">工作经历</a>
-            <a href="#block-prjEXP" id="nav-prjEXP" hidefocus="true">项目经验</a>
-            <a href="#block-wantMore" id="nav-wantMore" hidefocus="true">联系邮箱</a>
-        </nav>
-    </header>
-</section>
-
-<section id="block-intro">
-    <div class="container">
-        <div id="intro-icon">
-            <a class="link" href="http://github.com/dandanliu918" id="link-github" hidefocus="true">GitHub</a>
-            <a class="link" href="http://github.com/dandanliu918"
-               id="link-linkedin" hidefocus="true">Linkedin</a>
-            <img id="myPhoto" src="images/ss.png">
-            <a class="link" href="http://jasinyip.com/" id="link-blog" hidefocus="true">Blog</a>
-            <a class="link" href="mailto:dandanliu918@163.com" id="link-email" hidefocus="true">E-mail</a>
-        </div>
-
-        <div id="intro-text">
-            <ul class="fl">
-                <li><span>姓名</span> | 刘单单</li>
-                <li><span>手机</span> | 13615685820</li>
-                <li><span>邮箱</span> | <a href="mailto:dandanliu918@163.com" hidefocus="true">dandanliu918@163.com</a>
-                </li>
-                <li><span>所在地</span> | 上海</li>
-                <li><span>GitHub</span> | <a href="https://github.com/dandanliu918" hidefocus="true">点击进入</a></li>
-                <li><span>Blog</span> | <a href="http://dandanliu918.github.io/" hidefocus="true">点击进入</a></li>
-            </ul>
-            <div class="fr">
-                <p>我是一个性格幽默、做事认真的人。<br>我喜欢研究所碰到的各种技术，不给自己设边界，有 Geek 精神。<br>我有时间概念，能在约定时间内保证完成任务。</p>
-                <p>半年前端开发经验，熟悉 HTML、CSS、Javascript，能熟练开发符合 W3C 标准的页面，熟练使用 jQuery 框架，曾经开发过 jQuery 插件。<br>
-                    有良好的编码习惯。<br>
-                    有 Linux 基础，对服务器端开发有一定了解，能够配合程序员完成相关工作。<br>
-                    熟悉 PHP+MySQL；理解基本的算法分析与数据结构，以及面向对象的设计模式。
-                </p>
-            </div>
-        </div>
-
-
-    </div>
-</section>
-
-<section id="block-skill">
-    <div class="container">
-        <div class="skill-title">
-            <h2>专 业 技 能</h2>
-        </div>
-        <div class="skills">
-            <ul class="skill-lang">
-                <li>语言</li>
-                <li>HTML(5)</li>
-                <li>CSS(3)</li>
-                <li>Javascript</li>
-                <li>Python</li>
-                <li>PHP</li>
-                <li>SQL</li>
-                <li>C/C++</li>
-                <li>Visual Basic</li>
-            </ul>
-            <ul class="skill-idea">
-                <li>思想</li>
-                <li>W3C标准</li>
-                <li>语义化</li>
-                <li>表现与结构分离</li>
-                <li>响应式设计</li>
-            </ul>
-            <ul class="skill-frame">
-                <li>框架</li>
-                <li>jQuery</li>
-                <li>Bootstrap</li>
-                <li>Less</li>
-                <li>CoffeeScript</li>
-            </ul>
-            <ul class="skill-tech">
-                <li>技术</li>
-                <li>Git</li>
-                <li>SVN</li>
-                <li>Ajax</li>
-                <li>Linux</li>
-                <li>Apache</li>
-                <li>Ps/Ai/Fw</li>
-                <li>AutoCAD</li>
-            </ul>
-        </div>
-    </div>
-</section>
-
-<section id="block-workEXP">
-    <div class="container">
-        <div class="work-title">
-            <h2>工 作 经 历</h2>
-        </div>
-        <div class="workEXP-main">
-            <ul class="timebox">
-                <li class="time0">2012.09 - Now</li>
-                <li class="time1">2014.03 - Now</li>
-            </ul>
-            <div class="timeline"></div>
-            <ul class="workbox">
-                <li class="work-intro0">
-                    <label class="work-place">广东轻工职业技术学院</label>
-                    <label class="work-position">楼宇智能化工程技术 专业</label>
-                    <label class="work-do"></label>
-                </li>
-                <li class="work-intro1">
-                    <label class="work-place">工学咨询工作室</label>
-                    <label class="work-position">前端工程师 兼 PM</label>
-                    <label class="work-do">负责网站交互设计、网站前端界面实现；与甲方交涉、与甲方讨论及分析需求、流程、可行性评估等。</label>
-                </li>
-            </ul>
-        </div>
-    </div>
-</section>
-
-<section id="block-prjEXP">
-    <div class="container">
-        <div class="prjEXP-title">
-            <h2>项 目 经 验</h2>
-        </div>
-        <ul class="prjs">
-            <li class="prj" id="prj-helpmechoose">
-                <div class="prj-logo"></div>
-                <h3 class="prj-title">帮我选</h3>
-                <p class="prj-intro">一个帮助选择困难症人群选择吃什么的网站。项目为独立开发项目。</p>
-            </li>
-
-            <li class="prj" id="prj-navFixed">
-                <div class="prj-logo"></div>
-                <h3 class="prj-title"><a href="http://navfixed.jasinyip.com/" target="_blank">navFixed 插件</a></h3>
-                <p class="prj-intro">一款超轻量级的 jQuery 插件。它可以让原本不是在顶部的导航条，在滚动到它的位置时固定在顶部。本页的导航条也使用此插件。</p>
-            </li>
-
-            <li class="prj" id="prj-integralSystem">
-                <div class="prj-logo"></div>
-                <h3 class="prj-title">工学积分系统</h3>
-                <p class="prj-intro">为工学咨询工作室做的积分系统，包括后台管理系统，以及微信公众平台的开发。项目中主要工作是前端及PM，与两名php程序员一起开发。</p>
-            </li>
-        </ul>
-    </div>
-</section>
-
-<section id="block-wantMore" style="height: 502px;">
-    <p style="top: 212px;">快把我收到碗里吧<br>
-        <a href="mailto:yejunxing@gmail.com" hidefocus="true">dandanliu918@163.com</a>
-    </p>
-</section>
-<script src="js/jquery-1.11.1.min.js"></script>
-<script src="js/navFixed-1.0.1.min.js"></script>
-<script src="js/main.js"></script>
-
-</body>
-</html>
+<!DOCTYPE html><html><head>    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">    <title>全屏</title>    <link rel="stylesheet" href="css/reset.css">    <link rel="stylesheet" href="css/style.css"></head><body><div id="pageContain" style="height: 554px;">    <div class="page page1 current" style="transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);">        <div class="contain">            <p class="blockTitle1">对ME可感兴趣？</p>            <p class="blockTitle2">Now she is a Front-End engineer.</p>            <div id="fstPage-down"><a href="dandanliu918@163.com" hidefocus="true" class="shine-white">联系她</a></div>        </div>    </div>    <div class="page page2"         style="transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1); transform-origin: 50% 50% 0px; transform: translate(0px, 0px) translateZ(0px) scale(1) rotate(0deg); opacity: 1; transition-duration: 800ms;">        <div class="contain">            <div id="intro-icon">                <a class="link" href="http://github.com/dandanliu918" id="link-github" hidefocus="true">GitHub</a>                <a class="link" href="http://github.com/dandanliu918"                   id="link-linkedin" hidefocus="true">Linkedin</a>                <img id="myPhoto" src="images/d.jpg">                <a class="link" href="http://jasinyip.com/" id="link-blog" hidefocus="true">Blog</a>                <a class="link" href="mailto:dandanliu918@163.com" id="link-email" hidefocus="true">E-mail</a>            </div>            <div id="intro-text">                <ul class="fl">                    <li><span>姓名</span> | 刘单单</li>                    <li><span>手机</span> | 13615685820</li>                    <li><span>邮箱</span> | <a href="mailto:dandanliu918@163.com" hidefocus="true">dandanliu918@163.com</a>                    </li>                    <li><span>所在地</span> | 上海</li>                    <li><span>GitHub</span> | <a href="https://github.com/dandanliu918" hidefocus="true">点击进入</a></li>                    <li><span>Blog</span> | <a href="http://dandanliu918.github.io/" hidefocus="true">点击进入</a></li>                </ul>                <div class="fr">                    <p>近三年的专业网站开发工作室前端开发经验，对工作中涉及到的跨部门沟通，协调有成熟灵活的处理方式，擅长通过对话形式有条理的进行需求罗列，整理，工作逻辑性强。</p>                    <p>熟练掌握HTML/CSS/HTML5/CSS3，快速开发符合w3c标准的页面代码，常见应用：媒体查询，rem布局，动画，过渡，3D效果，处理各浏览器兼容问题；<br>                        熟练JavaScript，掌握常用的JavaScript框架（jQuery.js/Zepto.js），能够使用AJAX获取XML、JSON等各种形式的数据，实现页面的异步加载，完成前后台的数据交互，并能通过JSOP跨域，可根据项目需求封装库等常用组件;                    </p>                </div>            </div>        </div>    </div>    <div class="page page3" style="transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);">        <div class="contain">            <div class="skill-title">                <h2>专 业 技 能</h2>            </div>            <div class="skills">                <ul class="skill-lang">                    <li>语言</li>                    <li>HTML(5)</li>                    <li>CSS(3)</li>                    <li>Javascript</li>                    <li>node</li>                </ul>                <ul class="skill-idea">                    <li>思想</li>                    <li>W3C标准</li>                    <li>语义化</li>                    <li>响应式设计</li>                </ul>                <ul class="skill-frame">                    <li>框架</li>                    <li>jQuery</li>                    <li>Bootstrap</li>                    <li>Less</li>                    <li>angular</li>                    <li>react</li>                </ul>                <ul class="skill-tech">                    <li>技术</li>                    <li>Git</li>                    <li>Ajax</li>                    <li>Ps/Fw</li>                </ul>            </div>        </div>    </div>    <div class="page page4" style="transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);">        <div class="contain">            <div class="work-title">                <h2>工 作 经 历 & 项 目 经 验</h2>            </div>            <div class="workEXP-main">                <!-- <ul class="workname">                     <li><span>工作的公司</span></li>                     <li><span>上海兢鑫软件技术开发有限公司</span></li>                     <li><span>上海大含信息技术有限公司</span></li>                 </ul>-->                <ul class="worklist">                    <li>                        <div> <span>项目名称：</span>物盟盟APP</div>                        <div> <span>项目描述：</span>一款供客户查询物流信息的APP，从UI设计稿切图，用Swiper实现图片及页面的呈现及特效切换：下拉刷新，滑动;用ajax实现用户信息注册功能，然后配合后端人员的后期开发，负责后期BUG的处理和需求更新处理等</div>                    </li>                    <li>                        <div> <span>项目名称：</span>物盟盟APP</div>                        <div> <span>项目描述：</span>一款供客户查询物流信息的APP，从UI设计稿切图，用Swiper实现图片及页面的呈现及特效切换：下拉刷新，滑动;用ajax实现用户信息注册功能，然后配合后端人员的后期开发，负责后期BUG的处理和需求更新处理等</div>                    </li>                    <li>                        <div> <span>项目名称：</span>中联陆港物流平台</div>                        <div> <span>项目描述：</span>公司的物流系统的开发，主要功能是物流信息的收集与订单的处理。一款供公司研发部门处理物流信息的网站，现图片收缩、滚动、切换、浮动及动态导航按钮等效果，并用ajax进行异步刷新，通过node.js搭建后台服务器处理数据等内容。前期参与可问那个站的开发，配合产品原型设计，需求分析，UI设计制作，开发周期架构搭建，产品开发测试及上线</div>                    </li>                    <li>                        <div> <span>项目名称：</span>物流查询网站</div>                        <div> <span>项目描述：</span>顾客可以在客户端进行I/O操作订单信息，基于node运用了angular框架编写的后台，用Bootstrap搭建的前端操作页面，实现了I/O操作的前端页面；</div>                    </li>                    <li>                        <div> <span>项目名称：</span>上海设计周</div>                        <div> <span>项目描述：</span>该网站是一个电商展示网站，从项目前端页面响应式页面实现，适配PC端以及移动端，利用js实现延迟加载，瀑布流等，使用js完成页面功能部分，配合后台完成数据的添加和实现；</div>                    </li>                </ul>            </div>        </div>    </div>    <div class="page page5" style="transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);">        <div class="contain">            <div class="prjEXP-title">                <h2>技能提升</h2>            </div>            <ul class="prjs">                <li class="prj" id="prj-helpmechoose">                    <div class="prj-logo">W</div>                    <h3 class="prj-title"><a href="https://github.com/dandanliu918/mySlider">webpack</a></h3>                    <p class="prj-intro">前端打包工具，将代码进行合并，项目代码精简;</p>                </li>                <li class="prj" id="prj-navFixed">                    <div class="prj-logo">E</div>                    <h3 class="prj-title"><a href="https://github.com/dandanliu918/myBookShop">AngularJS</a></h3>                    <p class="prj-intro">  AngularJS是一个为动态WEB应用设计的结构框架。它能让你使用HTML作为模板语言，通过扩展HTML的语法，让你能更清楚、简洁地构建你的应用组件。</p>                </li>                <li class="prj" id="prj-integralSystem">                    <div class="prj-logo">B</div>                    <h3 class="prj-title"><a href="https://github.com/dandanliu918/mySlider">React</a> </h3>                    <p class="prj-intro">React 是一个用于构建用户界面的JavaScript库。React 拥有较高的性能，代码逻辑非常简单，越来越多的人已开始关注和使用它。</p>                </li>            </ul>        </div>    </div>    <div class="page page6" style="transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);">        <div class="contain">            <p>追求代码的简洁易读</p>            <p>善于学习并解决问题</p>            <p>对新技术好奇但理智</p>            <p>我是你要找的前端吗</p>            <p>去了解更多</p>            <p><a href="mailto:dandanliu918@163.com" hidefocus="true">dandanliu918@163.com</a></p>        </div>    </div></div><ul id="navBar">    <li data-page="0" class="active">&bigtriangledown;</li>    <li data-page="1">&bigtriangledown;</li>    <li data-page="2">&bigtriangledown;</li>    <li data-page="3">&bigtriangledown;</li>    <li data-page="4">&bigtriangledown;</li>    <li data-page="5">&bigtriangledown;</li></ul><script src="js/fullPage.min.js"></script><script>    var runPage;    runPage = new FullPage({        id: 'pageContain',        slideTime: 800,        effect: {            transform: {                translate: 'Y',                scale: [1, 1],                rotate: [0, 0]            },            opacity: [0, 1]        },        mode: 'wheel,touch,nav:navBar',        easing: 'ease'    });</script></body></html>
